--- a/config.json
+++ b/config.json
@@ -4,6 +4,8 @@
         "dasbord",
         "detail",
         "bottom",
-        "Recentbook"
+        "Recentbook",
+        "treadingnow",
+        "detail_buku"
     ]
 }
